[package]
name = "libcnb-cargo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cargo-libcnb"
path = "src/main.rs"

[dependencies]
toml = "0.5.8"
serde = "1.0.130"
libcnb-data = { path = "../libcnb-data" }
cargo_metadata = "0.14.1"
which = "4.2.2"
tempfile = "3.2.0"
flate2 = "1.0.22"
tar = "0.4.37"
structopt = "0.3"
